force-app/main/default/objects/RevenueManagement__c/RevenueManagement__c.object-meta.xml
<CustomObject>
    <label>Revenue Management</label>
    <nameField>
        <displayFormat>Target-{000000}</displayFormat>
        <label>Revenue Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>