force-app/main/default/objects/RevenueManagement__c/fields/ExpectedRevenueEndDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenueEndDate__c</fullName>
    <label>Expected Revenue End Date</label>
    <type>Date</type>
</CustomField>