force-app/main/default/objects/RevenueManagement__c/fields/ExpectedRevenueStartDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRevenueStartDate__c</fullName>
    <label>Expected Revenue Start Date</label>
    <type>Date</type>
</CustomField>