force-app/main/default/objects/RevenueManagement__c/fields/TotalAmounts__c.field-meta.xml
<CustomField>
    <fullName>TotalAmounts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>