force-app/main/default/objects/RevenueManagement__c/validationRules/CannotCreateRecordforOverTarget.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotCreateRecordforOverTarget</fullName>
    <active>true</active>
    <description>If the expected revenue is greater than the project target then cannot create the new record.</description>
    <errorConditionFormula>Project__r.TotalExpectedRevenue__c &gt;= Project__r.TargetRevenue__c &amp;&amp; ISNEW()</errorConditionFormula>
    <errorDisplayField>Target__c</errorDisplayField>
    <errorMessage>The total expected revenue is greater than target revenue. This record cannot save.</errorMessage>
</ValidationRule>