force-app/main/default/objects/RevenueManagement__c/validationRules/EndDateIsInvalid.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateIsInvalid</fullName>
    <active>true</active>
    <description>End Date Cannot Less Than Start Date</description>
    <errorConditionFormula>IF(ExpectedRevenueEndDate__c &lt; ExpectedRevenueStartDate__c , True,False)</errorConditionFormula>
    <errorMessage>End Date cannot less than start date</errorMessage>
</ValidationRule>