force-app/main/default/objects/RevenueManagement__c/validationRules/TargetCannotBeNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>TargetCannotBeNegative</fullName>
    <active>true</active>
    <errorConditionFormula>Target__c &lt;0</errorConditionFormula>
    <errorMessage>A target cannot be negative.</errorMessage>
</ValidationRule>