force-app/main/default/objects/RevenueManagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExpectedRevenueStartDate__c</columns>
    <columns>ExpectedRevenueEndDate__c</columns>
    <columns>Project__c</columns>
    <columns>Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>